<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PerfectLook</string>
    <string name="welcome_on_board">Welcome on board!</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="terms_and_policy"><u>Terms and policy</u></string>
    <string name="skip"><u>Skip</u></string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="forgot_your_password"><u>forgot your password?</u></string>
    <string name="submit">Submit</string>
    <string name="social_media">or login with social media</string>
    <string name="facebook_log_in">Facebook log in</string>
    <string name="twitter_log_in">Twitter log in</string>
    <string name="google_log_in">Google+ log in</string>
    <string name="join_us">Join us</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="choose_calculate_title">If you know which body type is yours you can choose it.\nIf you don\'t, you can calculate it right now.</string>
    <string name="choose">Choose</string>
    <string name="calculate">Calculate</string>
    <string name="choose_title">Choose the body type which is the closest to yours</string>
    <string name="hourglass_shape">Hourglass shape</string>
    <string name="round_shape">Round shape</string>
    <string name="triangle_shape">Triangle shape</string>
    <string name="rectangle_shape">Rectangle shape</string>
    <string name="upturned_triangle_shape">Upturned triangle shape</string>
    <string name="calculator_title">Please enter your parameters (shoulders, waist, hips) as shown below</string>
    <string name="calcualte">Calcualte</string>
    <string name="shoulders">Shoulders</string>
    <string name="waist">Waist</string>
    <string name="hips">Hips</string>
    <string name="your_shape">Your shape is\n</string>
    <string name="select_dress_type_title">Choose clothing and see recommendations for your body type</string>
    <string name="next"><u>Next</u></string>
    <string name="suited_dress_type_title">We picked dress types for you!</string>
    <string name="terms_policy_dialog_title">Terms and Privacy Policy</string>
    <string name="terms_policy_dialog_message">
		By clicking in continue, you agree to our
        Terms and Privacy Policy. We use a service
        that\'s pre-installed on your device to auto-update
        apps. You can turn off the service at any time.
	</string>
    <string name="terms_title">Terms &amp; Conditions</string>
    <string name="policy_title">Privacy Policy</string>
    <string name="terms_content">
		By downloading or using the app, these terms will automatically
		apply to you – you should make sure therefore that you read them
		carefully before using the app. You’re not allowed to copy, or
		modify the app, any part of the app, or our trademarks in any way.
		You’re not allowed to attempt to extract the source code of the app,
		and you also shouldn\'t try to translate the app into other languages,
		or make derivative versions. The app itself, and all the trade marks,
		copyright, database rights and other intellectual property rights
		related to it, still belong to Kari.M production.\n
		Kari.M production is committed to ensuring that the app is as useful and
		efficient as possible. For that reason, we reserve the right to make
		changes to the app or to charge for its services, at any time and for
		any reason. We will never charge you for the app or its services
		without making it very clear to you exactly what you’re
		paying for.\n
		The Perfect Look app stores and processes
		personal data that you have provided to us, in order to
		provide our Service. It’s your responsibility to keep your phone
		and access to the app secure. We therefore recommend that you
		do not jailbreak or root your phone, which is the process of
		removing software restrictions and limitations imposed by the
		official operating system of your device. It could make your
		phone vulnerable to malware/viruses/malicious programs,
		compromise your phone’s security features and it could mean
		that the Perfect Look app won’t work properly or at all.\n
		The app does use third party
		services that declare their own Terms and Conditions.\n
		Link to Terms and Conditions
		of third party service providers used by the app\n
		- Google Play Services\n
		- Google Analytics for Firebase\n
		- Facebook\n
		You should be aware that there are certain things that Kari.M
		production will not take responsibility for. Certain functions
		of the app will require the app to have an active internet connection.
		The connection can be Wi-Fi, or provided by your mobile network
		provider, but Kari.M production cannot take responsibility for the app
		not working at full functionality if you don’t have access to Wi-Fi,
		and you don’t have any of your data allowance left.\n
		If you’re using the app outside of an area with Wi-Fi, you should
		remember that your terms of the agreement with your mobile network
		provider will still apply. As a result, you may be charged by your
		mobile provider for the cost of data for the duration of the
		connection while accessing the app, or other third party charges.
		In using the app, you’re accepting responsibility for any such
		charges, including roaming data charges if you use the app
		outside of your home territory (i.e. region or country) without
		turning off data roaming. If you are not the bill payer for the
		device on which you’re using the app, please be aware that we assume
		that you have received permission from the bill payer for using
		the app.\n
		Along the same lines, Kari.M production cannot
		always take responsibility for the way you use the app i.e.
		You need to make sure that your device stays charged – if it
		runs out of battery and you can’t turn it on to avail the Service,
		Kari.M production cannot accept responsibility.\n
		With respect to Kari.M production’s responsibility for your use
		of the app, when you’re using the app, it’s important to bear
		in mind that although we endeavour to ensure that it is updated
		and correct at all times, we do rely on third parties to provide
		information to us so that we can make it available to you.
		Kari.M production accepts no liability for any loss, direct or
		indirect, you experience as a result of relying wholly on this
		functionality of the app.\n
		At some point, we may wish to update the app. The app is
		currently available on Android &amp; iOS – the requirements for both
		systems(and for any additional systems we decide to extend the
		availability of the app to) may change, and you’ll need to
		download the updates if you want to keep using the app.
		Kari.M production does not promise that it will always
		update the app so that it is relevant to you and/or works
		with the Android &amp; iOS version that you have installed on
		your device. However, you promise to always accept updates
		to the application when offered to you, We may also wish to
		stop providing the app, and may terminate use of it at any
		time without giving notice of termination to you. Unless we
		tell you otherwise, upon any termination, (a) the rights and
		licenses granted to you in these terms will end; (b) you must
		stop using the app, and (if needed) delete it from your
		device.\n
		<b>Changes to This Terms and Conditions</b>\n
			We may update our Terms and Conditions from time to time.
			Thus, you are advised to review this page periodically for
			any changes. We will notify you of any changes by
			posting the new Terms and Conditions on this page.\n
			These terms and conditions are effective as of 2020-08-18\n
		<b>Contact Us</b>\n
			If you have any questions or suggestions about our Terms
			and Conditions, do not hesitate to contact us at
			perfect.look.app@gmail.com.
	</string>
    <string name="myaccount">MyAccount</string>
    <string name="favorites">Favorites</string>
	<string name="notifications">Notifications</string>
	<string name="personal_information">Personal Information</string>
	<string name="my_body_type">My Body Type</string>
	<string name="perfect_look_support_team">Perfect Look Support Team</string>
	<string name="terms_and_privacy">Terms and Privacy</string>
    <string name="sign_out">Sign out</string>
</resources>