<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:scaleType="centerCrop"
    tools:context=".MainActivity">

    <TextView
        style="@style/Theme.PerfectLook.Header.Title1"
        android:text="@string/welcome_on_board"
        android:layout_marginTop="100sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/home_login_btn"
            style="@style/Theme.PerfectLook.Button.LeftBorder"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/home_signup_btn"
            style="@style/Theme.PerfectLook.Button.RightBorder"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/home_terms_policy_btn"
            style="@style/Theme.PerfectLook.TextView"
            android:layout_marginTop="10dp"
            android:text="@string/terms_and_policy"
            android:layout_gravity="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/home_skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="#00ffffff"
            android:text="@string/skip"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_light"
            android:textAllCaps="false"
            android:drawableEnd="@drawable/ic_baseline_arrow"
            android:drawablePadding="-15dp"
            android:padding="0dp"
            android:layout_marginRight="15dp" />

    </LinearLayout>
</RelativeLayout>