<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calculator_background"
    tools:context=".choosecalculate.CalculateBodyTypeActivity">

    <TextView
        android:id="@+id/calculator_title"
        android:layout_marginTop="40sp"
        style="@style/Theme.PerfectLook.Header.Title2"
        android:text="@string/calculator_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/calc_shoulders_input"
            style="@style/Theme.PerfectLook.EditText.CalculatorInput"
            android:hint="@string/shoulders"
            android:background="@drawable/calculator_shoulders" />

        <EditText
            android:id="@+id/calc_waist_input"
            style="@style/Theme.PerfectLook.EditText.CalculatorInput"
            android:hint="@string/waist"
            android:background="@drawable/calculator_waist" />

        <EditText
            android:id="@+id/calc_hips_input"
            style="@style/Theme.PerfectLook.EditText.CalculatorInput"
            android:hint="@string/hips"
            android:background="@drawable/calculator_hips" />

    </LinearLayout>

    <Button
        android:id="@+id/calculator_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:background="#00ffffff"
        android:drawableRight="@drawable/ic_baseline_arrow"
        android:text="@string/calcualte"
        android:textSize="20sp"
        android:textColor="@color/button"
        android:fontFamily="@font/roboto_light"
        android:textAllCaps="false"
        android:drawableEnd="@drawable/ic_baseline_arrow" />

</RelativeLayout>