<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center"
        style="@style/Theme.PerfectLook.TextView"
        android:text="@string/social_media" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/login_fb"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_facebook"
            android:contentDescription="@string/facebook_log_in"
            android:layout_weight="1"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/login_tw"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_twitter"
            android:contentDescription="@string/twitter_log_in"
            android:layout_weight="1"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/login_gp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_google"
            android:contentDescription="@string/google_log_in"
            android:layout_weight="1"
            android:padding="5dp" />

    </LinearLayout>
</LinearLayout>